# mutual

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFESTO.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
api/: audit.py  auth.py  claims.py  contributions.py  dashboard.py  dashboard_models.py  db.py  deps.py  main.py  orm.py  payouts.py  policies.py  routes_account.py  routes_audit.py  routes_auth.py  routes_claims.py  routes_contributions.py  routes_dashboard.py  routes_login.py  routes_members.py  routes_platform_admin.py  routes_pwa.py  routes_settings.py  routes_setup.py  setup.py  storage.py  voting.py  webhooks.py
docs/: architecture.md  claude-code-prompt.md  getting-started.md  legal-notes.md  platform-admin.md
governance/: README.md  __init__.py  _outcome.py  auto_approve.py  majority.py  unanimous.py
models/: README.md  base.py
tests/: conftest.py  test_account_routes.py  test_audit.py  test_auth_routes.py  test_auth_service.py  test_claims_routes.py  test_claims_service.py  test_contributions_routes.py  test_contributions_service.py  test_dashboard_models.py  test_dashboard_routes.py  test_dashboard_service.py  test_db.py  test_legacy_redirects.py  test_login_routes.py  test_main.py  test_members_routes.py  test_migration_m1.py  test_migrations.py  test_multi_pool_isolation.py  test_orm.py  test_payouts_routes.py  test_payouts_service.py  test_platform_admin_routes.py  test_pwa.py  test_settings_routes.py  test_setup_routes.py  test_setup_service.py  test_voting_routes.py  (+3 more)
(+51 files in other folders)
