[project]
name = "mutual"
version = "0.1.0"
description = "Self-hosted infrastructure for mutual aid pools and small-group risk sharing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "models*", "governance*"]

[tool.pytest.ini_options]
testpaths = ["models", "governance", "api", "tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
